# icp-mock-api

./: Cargo.toml  README.md  dfx.json
src/mock_api_backend/: Cargo.toml  mock_api_backend.did
src/mock_api_backend/src/: lib.rs
