[package]
name = "mock_api_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
ic-cdk = "0.16"
serde_json = "1.0"
once_cell = "1.9"
